grpc: added timestamps to provider response
